NIAD-976: Create organization mapper.